# Aerosentinel-GCS

./: Cargo.toml  README.md  repo_layout.sh  setup_toolchain.sh
.github/workflows/: ci.yml
Aerosentinel GCS/: AeroSentinel_Rocket 2.scn  AeroSentinel_Rocket.usdz  Aerosentinel_GCS.entitlements  Aerosentinel_Scene 2.scn  Aerosentinel_Scene 3.scn  Aerosentinel_Scene.scn  AppDelegate.swift  ChartsViewController 2.swift  Level_Indicators.swift  Stage_Control.swift  Telemetry_Graphs.swift  ViewController.swift
Aerosentinel GCS.xcodeproj/: project.pbxproj
Aerosentinel GCS.xcodeproj/project.xcworkspace/xcuserdata/yaxsomo.xcuserdatad/: UserInterfaceState.xcuserstate
Aerosentinel GCS.xcodeproj/xcuserdata/yaxsomo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Aerosentinel GCS.xcodeproj/xcuserdata/yaxsomo.xcuserdatad/xcschemes/: xcschememanagement.plist
Aerosentinel GCS/Assets.xcassets/AppIcon.appiconset/: Contents.json
Aerosentinel GCS/Base.lproj/: Main.storyboard
Aerosentinel GCSTests/: Aerosentinel_GCSTests.swift
Aerosentinel GCSUITests/: Aerosentinel_GCSUITests.swift  Aerosentinel_GCSUITestsLaunchTests.swift
ORSSerialPort-master/Framework Project/ORSSerialPort.xcodeproj/: project.pbxproj
apps/gcs-desktop/: .gitignore  package.json  pnpm-lock.yaml
apps/gcs-desktop/src-tauri/: tauri.conf.json
crates/config/: Cargo.toml
crates/flash/: Cargo.toml
crates/playback/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/telemetry/src/: echo.rs  frame.rs  lib.rs
crates/telemetry/tests/: echo_loop.rs
scripts/: pre-commit
(+1 files in other folders)
