[package]
name    = "telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow        = "1.0.98"
bytes         = "1.10.1"
crc           = "3.3.0"            # ← stay on 3.x, no extra features
prost         = "0.14.1"
prost-derive  = "0.14.1"
serialport    = "4.7.2"
tokio-serial  = "5.4.5"
thiserror     = "2.0.12"
tokio         = { version = "1.45.1", features = ["full"] }